[gd_scene load_steps=4 format=3 uid="uid://ojpob7d0bs30"]

[ext_resource type="Script" path="res://item/item.gd" id="1_8elni"]
[ext_resource type="Texture2D" uid="uid://2eh5rk3pu5d5" path="res://icon.svg" id="1_odahd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vgvtw"]
size = Vector2(130, 130)

[node name="Item" type="Area2D"]
collision_layer = 4
collision_mask = 15
script = ExtResource("1_8elni")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_odahd")

[node name="Filter" type="ColorRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vgvtw")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
